--- a/style.css
+++ b/style.css
@@ -7,3 +7,18 @@ body {
 .aligncenter {
     text-align: center;
 }
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.point {
+    width: 30px;
+    height: 30px;
+    background-color: yellow;
+    border-radius: 50%;
+    position: absolute;
+}
