--- a/style.css
+++ b/style.css
@@ -26,3 +26,13 @@ body {
     border-radius: 50%;
     position: absolute;
 }
+
+.free-box {
+    /*10.35 % 2h timeslot width*/
+    background-color: white;
+    position: absolute;
+    color: black;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
